--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,12 @@
     --dark-color: rgb(10, 3, 31);
     --fuschia-color: #FF00AA;
     --pink-color: rgb(225, 0, 255);
+    --dark-blue-color: #152246;
+    --dark-gray-color: #2f3138;
     font-family: 'Roboto', sans-serif;
+}
+html{
+    scroll-behavior: smooth;
 }
 
 .fuschia-color{
@@ -23,11 +28,12 @@
     top: 0;
     left: 0;
     background: var(--dark-color);
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 15px;
+    z-index: 1;
 }
 
 #nav-brand{
@@ -81,7 +87,7 @@
     margin: 5px auto;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 728px){
     #nav-menu{
         display: block;
     }
@@ -101,6 +107,11 @@
         align-items: center;
         justify-content: space-evenly;
         flex-direction: column;
+        padding: 10px;
+    }
+    #nav-links li{
+        width: 100%;
+        /* text-align: center; */
     }
 }
 
@@ -109,3 +120,68 @@
 }
 
 /* MENU END */
+
+/* MAIN HEADER */
+
+#main-header{
+    background: rgba(0,0,0, .7);
+    /* width: 100vw; */
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    color: var(--fuschia-color);
+    font-size: 0.8em;
+}
+
+#main-header #main-logo{
+    width: 90%;
+}
+
+#main-header #main-bg{
+    background: url("../img/campus.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+}
+
+/* MAIN HEADER END */
+
+section{
+    padding: 30px 15px;
+}
+section p{
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+section h2{
+    letter-spacing: 4px;
+    margin-bottom: 40px;
+}
+section a{
+    text-decoration: none;
+    color: var(--pink-color);
+}
+section a:hover{
+    color: var(--fuschia-color);
+}
+section a:active{
+    color: #eee;
+}
+
+.dark-section{
+    background: var(--dark-blue-color);
+    color: #ddd;
+}
+
+#location .content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
