--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ html{
     width: 30px;
     height: 3px;
     margin: 5px auto;
+    transition: transform .3s ease-out;
 }
 
 @media only screen and (max-width: 728px){
@@ -261,3 +262,22 @@ section a:active{
         display: none !important;
     }
 }
+
+/* google maps start */
+.mapouter {
+    position: relative;
+    text-align: right;
+    width: 95%;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    width: 100%;
+}
+
+#gmap_canvas {
+    width: 100%;
+    height: 50vh;
+}
+/* google maps end */
