--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,19 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+html{
+    scroll-behavior: smooth;
+}
+:root{
     --dark-color: rgb(10, 3, 31);
     --fuschia-color: #FF00AA;
     --pink-color: rgb(225, 0, 255);
     --dark-blue-color: #152246;
     --dark-color: #03032d;
     --dark-gray-color: #2f3138;
-    font-family: 'Roboto', sans-serif;
-}
-html{
-    scroll-behavior: smooth;
 }
 
 .fuschia-color{
@@ -66,7 +69,6 @@ html{
 }
 
 #nav-menu{
-    margin-right: 40px;
     padding: 5px;
     display: none;
 }
