Remove uma limitação de classe
a classe .content estava limitada ao ID location, removi para que pudesse ser usado na selfie do evento

--- a/css/main.css
+++ b/css/main.css
@@ -207,7 +207,7 @@ section a:active{
     color: #ddd;
 }
 
-#location .content{
+.content{
     display: flex;
     justify-content: center;
     align-items: center;
