--- a/css/main.css
+++ b/css/main.css
@@ -304,7 +304,7 @@ section a:active{
     color: white;
 }
 
-#galeria .content img{
+#galeria img{
     width: 90%;
     border-radius: 5px;
     box-shadow: 2px 3px 5px 3px rgba(15, 25, 53, 0.5);
